--- a/index.html
+++ b/index.html
@@ -1,58 +1,152 @@
-<!doctype html>
+ <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>luixlacrux.GitHub.io by luixlacrux</title>
-
+    <title>Luis Lacruz - Frontend Developer</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>luixlacrux.GitHub.io</h1>
-        <p>Proyecto de Marca Personal</p>
+  <body>ç
+    <header class="Header">
+      <div class="wrapper">
+        <div class="Header-card">
+          <h1 class="title">Hello I'm Patrick Ford</h1>
+          <p class="slug">a Frontend Developer by passion</p>
+          <div class="buttons">
+            <a class="btn-dark" href="#contact">Contact me</a>
+            <a class="btn-outline" href="#contact">About me</a>
+          </div>
+        </div>
+        <nav class="Header-nav">
+          <ul class="Header-nav--list">
+            <li class="item">
+              <a href="#about">About</a>
+            </li>
+            <li class="item">
+              <a href="#work">Work</a>
+            </li>
+            <li class="item">
+              <a class="btn-outline" href="#contact">Contact me</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-
-        <p class="view"><a href="https://github.com/luixlacrux">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+    <main>
+      <section class="About wrapper">
+        <figure class="About-avatar">
+          <img src="/assets/images/face.jpg" alt="Luis Lacruz">
+        </figure>
+        <div class="About-extract">
+          <p class="descripcion">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            <br>
+            <br>
+            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat. Duis aute irure consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+          </p>
+          <h5>Follow me on</h5>
+          <div class="social">
+            <a href="https://github.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-github"></i>
+            </a>
+            <a href="https://ve.linkedin.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-linkedin"></i>
+            </a>
+            <a href="https://twitter.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-twitter"></i>
+            </a>
+            <a href="https://instagram.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-instagram"></i>
+            </a>
+          </div>
+        </div>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+
+      <section class="Project" id="work">
+        <article class="Project-item">
+          <img src="/assets/images/1.png" alt="">
+          <h2 class="title">Website Constructora Casert C.A</h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam
+            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
+          </p>
+        </article>
+        <article class="Project-item">
+          <img src="/assets/images/1.png" alt="">
+          <h2 class="title">Website Constructora Casert C.A</h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam
+            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
+          </p>
+        </article>
+        <article class="Project-item">
+          <img src="/assets/images/1.png" alt="">
+          <h2 class="title">Website Constructora Casert C.A</h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam
+            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
+          </p>
+        </article>
+        <article class="Project-item">
+          <img src="/assets/images/1.png" alt="">
+          <h2 class="title">Website Constructora Casert C.A</h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam
+            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
+          </p>
+        </article>
+      </section>
+
+      <section class="Contact wrapper" id="contact">
+        <h3 class="title">Contact</h3>
+        <form action="/" method="post" class="Contact-form">
+          <div class="field">
+            <input type="text" name="name" placeholder="Name">
+            <input type="email" name="email" placeholder="Email">
+          </div>
+          <div class="field">
+            <textarea placeholder="Message" name="message" cols="15" rows="8"></textarea>
+          </div>
+          <div class="send">
+            <button class="btn-dark">Send</button>
+          </div>
+        </form>
+      </section>
+
+      <footer class="Footer">
+        <div class="Footer-info">
+          <h6>Patrick Ford</h6>
+          <a href="mailto:luislacruz.dev@gmail.com">luislacruz.dev@gmail.com</a>
+        </div>
+        <div class="social">
+          <a href="https://github.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+            <i class="icon-github"></i>
+          </a>
+          <a href="https://ve.linkedin.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+            <i class="icon-linkedin"></i>
+          </a>
+          <a href="https://twitter.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+            <i class="icon-twitter"></i>
+          </a>
+          <a href="https://instagram.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+            <i class="icon-instagram"></i>
+          </a>
+        </div>
       </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    </main>
   </body>
 </html>
