[add] styles for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <p class="slug">a Frontend Developer by passion</p>
           <div class="buttons">
             <a class="btn-dark" href="#contact">Contact me</a>
-            <a class="btn-outline" href="#contact">About me</a>
+            <a class="btn-outline" href="#about">About me</a>
           </div>
         </div>
         <nav class="Header-nav">
@@ -36,7 +36,7 @@
     </header>
 
     <main>
-      <section class="About wrapper">
+      <section class="About wrapper" id="about">
         <figure class="About-avatar">
           <img src="/assets/images/face.jpg" alt="Luis Lacruz">
         </figure>
@@ -128,23 +128,24 @@
       </section>
 
       <footer class="Footer">
-        <div class="Footer-info">
-          <h6>Patrick Ford</h6>
-          <a href="mailto:luislacruz.dev@gmail.com">luislacruz.dev@gmail.com</a>
-        </div>
-        <div class="social">
-          <a href="https://github.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
-            <i class="icon-github"></i>
-          </a>
-          <a href="https://ve.linkedin.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
-            <i class="icon-linkedin"></i>
-          </a>
-          <a href="https://twitter.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
-            <i class="icon-twitter"></i>
-          </a>
-          <a href="https://instagram.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
-            <i class="icon-instagram"></i>
-          </a>
+        <div class="Footer-wrapper">
+          <div class="Footer-info">
+            <a href="mailto:luislacruz.dev@gmail.com">luislacruz.dev@gmail.com</a>
+          </div>
+          <div class="social">
+            <a href="https://github.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-github"></i>
+            </a>
+            <a href="https://ve.linkedin.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-linkedin"></i>
+            </a>
+            <a href="https://twitter.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-twitter"></i>
+            </a>
+            <a href="https://instagram.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+              <i class="icon-instagram"></i>
+            </a>
+          </div>
         </div>
       </footer>
     </main>
