[add] images projects

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="https://github.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
               <i class="icon-github"></i>
             </a>
-            <a href="https://ve.linkedin.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+            <a href="https://ve.linkedin.com/in/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
               <i class="icon-linkedin"></i>
             </a>
             <a href="https://twitter.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
@@ -69,54 +69,104 @@
       </section>
 
       <section class="Project" id="work">
-        <article class="Project-item">
-          <img src="/assets/images/1.png" alt="">
-          <h2 class="title">Website Constructora Casert C.A</h2>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam
-            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
-          </p>
-        </article>
-        <article class="Project-item">
-          <img src="/assets/images/1.png" alt="">
-          <h2 class="title">Website Constructora Casert C.A</h2>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam
-            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
-          </p>
-        </article>
-        <article class="Project-item">
-          <img src="/assets/images/1.png" alt="">
-          <h2 class="title">Website Constructora Casert C.A</h2>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam
-            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
-          </p>
-        </article>
-        <article class="Project-item">
-          <img src="/assets/images/1.png" alt="">
-          <h2 class="title">Website Constructora Casert C.A</h2>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam
-            <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
-          </p>
-        </article>
+        <h3 class="title">Projects</h3>
+        <span class="title">Tap for see more info</span>
+        <div class="Project-container wrapper">
+          <article class="Project-item">
+            <h2 class="title">Constructora Casert C.A</h2>
+            <figure>
+              <img src="../assets/images/casert-2.jpg" alt="">
+            </figure>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam
+              <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
+            </p>
+          </article>
+          <article class="Project-item">
+            <h2 class="title">Sfotipy</h2>
+            <figure>
+              <img src="../assets/images/sfotipy.jpg" alt="" width="250" height="250">
+            </figure>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam
+              <a class="btn-outline" href="https://github.com/luixlacrux/sfotipy-nodejs" target="_blank">View Repo</a>
+            </p>
+          </article>
+          <article class="Project-item">
+            <h2 class="title">React Notes</h2>
+            <figure>
+              <img src="../assets/images/react-notes.jpg" alt="">
+            </figure>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam
+              <a class="btn-outline" href="https://keep-notes-c6b14.firebaseapp.com/" target="_blank">View Project</a>
+            </p>
+          </article>
+          <article class="Project-item">
+            <h2 class="title">Radio Universal</h2>
+            <figure>
+              <img src="../assets/images/radio-universal.jpg" alt="">
+            </figure>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam
+              <a class="btn-outline" href="https://luixlacrux.github.io/radio-universal" target="_blank">View Project</a>
+            </p>
+          </article>
+          <article class="Project-item">
+            <h2 class="title">PlayPeliculas</h2>
+            <figure>
+              <img src="../assets/images/playpeliculas.jpg" alt="">
+            </figure>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam
+              <a class="btn-outline" href="http://luixlacrux.github.io/PlayPeliculas" target="_blank">View Project</a>
+            </p>
+          </article>
+          <article class="Project-item">
+            <h2 class="title">Infocentro</h2>
+            <figure>
+              <img src="../assets/images/infocentro.jpg" alt="">
+            </figure>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam
+              <a class="btn-outline" href="https://infocentro-9968f.firebaseapp.com/" target="_blank">View Project</a>
+            </p>
+          </article>
+          <article class="Project-item">
+            <h2 class="title">School Dashboard</h2>
+            <figure>
+              <img src="../assets/images/school.jpg" alt="">
+            </figure>
+            <p class="description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam
+              <a class="btn-outline" href="https://dashboard-school.firebaseapp.com/docentes/" target="_blank">View Project</a>
+            </p>
+          </article>
+        </div>
       </section>
 
       <section class="Contact wrapper" id="contact">
         <h3 class="title">Contact</h3>
-        <form action="/" method="post" class="Contact-form">
+        <form action="https://formspree.io/luislacruz.dev@gmail.com" method="post" class="Contact-form">
           <div class="field">
+            <input type="hidden" name="_subject" value="Website contact!" />
             <input type="text" name="name" placeholder="Name">
-            <input type="email" name="email" placeholder="Email">
+            <input type="email" name="_replyto" placeholder="Email">
+            <input type="text" name="_gotcha" style="display:none" />
           </div>
           <div class="field">
             <textarea placeholder="Message" name="message" cols="15" rows="8"></textarea>
@@ -136,7 +186,7 @@
             <a href="https://github.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
               <i class="icon-github"></i>
             </a>
-            <a href="https://ve.linkedin.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
+            <a href="https://ve.linkedin.com/in/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
               <i class="icon-linkedin"></i>
             </a>
             <a href="https://twitter.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
