[add] translate site

--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Frontend Developer, Con experiencia en desarrollo web tanto en el área Frontend (HTML, CSS, Javascript) como Backend (Nodejs).">
     <title>Luis Lacruz - Frontend Developer</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width">
   </head>
-  <body>ç
+  <body>
     <header class="Header">
       <div class="wrapper">
         <div class="Header-card">
-          <h1 class="title">Hello I'm Patrick Ford</h1>
-          <p class="slug">a Frontend Developer by passion</p>
+          <h1 class="title">Hola Soy Luis Lacruz</h1>
+          <p class="slug">Frontend Developer por pasión</p>
           <div class="buttons">
-            <a class="btn-dark" href="#contact">Contact me</a>
-            <a class="btn-outline" href="#about">About me</a>
+            <a class="btn-dark" href="#contact">Contactamé</a>
+            <a class="btn-outline" href="#about">Sobre mi</a>
           </div>
         </div>
         <nav class="Header-nav">
           <ul class="Header-nav--list">
             <li class="item">
-              <a href="#about">About</a>
+              <a href="#about">Sobre mi</a>
             </li>
             <li class="item">
-              <a href="#work">Work</a>
+              <a href="#work">Proyectos</a>
             </li>
             <li class="item">
-              <a class="btn-outline" href="#contact">Contact me</a>
+              <a class="btn-outline" href="#contact">Contactamé</a>
             </li>
           </ul>
         </nav>
@@ -41,16 +42,17 @@
           <img src="/assets/images/face.jpg" alt="Luis Lacruz">
         </figure>
         <div class="About-extract">
-          <p class="descripcion">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
+          <p class="description">
+            Mi nombre es Luis Lacruz, tengo 20 años y soy Frontend Developer, apasionado por la tecnología y autodidacta.
+            Con experiencia en desarrollo web tanto en el área Frontend (HTML, CSS, Javascript) como Backend (Nodejs).
+            He realizado distintos proyectos a lo largo de mi formación profesional
+            de manera autodidacta.
             <br>
             <br>
-            Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-            commodo consequat. Duis aute irure consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna
+            ¿ Quieres saber más ? Escribeme sera un placer placticar.
+            <a href="#contact">luislacruz.dev@gmail.com</a>
           </p>
-          <h5>Follow me on</h5>
+          <h5>Sigueme en</h5>
           <div class="social">
             <a href="https://github.com/luixlacrux" target="_blank" alt="@luixlacrux - Luis Lacruz">
               <i class="icon-github"></i>
@@ -69,8 +71,8 @@
       </section>
 
       <section class="Project" id="work">
-        <h3 class="title">Projects</h3>
-        <span class="title">Tap for see more info</span>
+        <h3 class="title">Proyectos</h3>
+        <span class="title">Click en el proyecto para conocer mas</span>
         <div class="Project-container wrapper">
           <article class="Project-item">
             <h2 class="title">Constructora Casert C.A</h2>
@@ -81,7 +83,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Ut enim ad minim veniam
-              <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">View Project</a>
+              <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
@@ -93,7 +95,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Ut enim ad minim veniam
-              <a class="btn-outline" href="https://github.com/luixlacrux/sfotipy-nodejs" target="_blank">View Repo</a>
+              <a class="btn-outline" href="https://github.com/luixlacrux/sfotipy-nodejs" target="_blank">Ver Repositorio</a>
             </p>
           </article>
           <article class="Project-item">
@@ -105,7 +107,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Ut enim ad minim veniam
-              <a class="btn-outline" href="https://keep-notes-c6b14.firebaseapp.com/" target="_blank">View Project</a>
+              <a class="btn-outline" href="https://keep-notes-c6b14.firebaseapp.com/" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
@@ -117,7 +119,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Ut enim ad minim veniam
-              <a class="btn-outline" href="https://luixlacrux.github.io/radio-universal" target="_blank">View Project</a>
+              <a class="btn-outline" href="https://luixlacrux.github.io/radio-universal" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
@@ -129,7 +131,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Ut enim ad minim veniam
-              <a class="btn-outline" href="http://luixlacrux.github.io/PlayPeliculas" target="_blank">View Project</a>
+              <a class="btn-outline" href="http://luixlacrux.github.io/PlayPeliculas" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
@@ -141,7 +143,7 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Ut enim ad minim veniam
-              <a class="btn-outline" href="https://infocentro-9968f.firebaseapp.com/" target="_blank">View Project</a>
+              <a class="btn-outline" href="https://infocentro-9968f.firebaseapp.com/" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
@@ -153,26 +155,26 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit,
               sed do eiusmod tempor incididunt ut labore et dolore magna
               aliqua. Ut enim ad minim veniam
-              <a class="btn-outline" href="https://dashboard-school.firebaseapp.com/docentes/" target="_blank">View Project</a>
+              <a class="btn-outline" href="https://dashboard-school.firebaseapp.com/docentes/" target="_blank">Ver proyecto</a>
             </p>
           </article>
         </div>
       </section>
 
       <section class="Contact wrapper" id="contact">
-        <h3 class="title">Contact</h3>
+        <h3 class="title">Contacto</h3>
         <form action="https://formspree.io/luislacruz.dev@gmail.com" method="post" class="Contact-form">
+          <input type="hidden" name="_subject" value="Website contact!" />
+          <input type="text" name="_gotcha" style="display:none" />
           <div class="field">
-            <input type="hidden" name="_subject" value="Website contact!" />
-            <input type="text" name="name" placeholder="Name">
-            <input type="email" name="_replyto" placeholder="Email">
-            <input type="text" name="_gotcha" style="display:none" />
+            <input type="text" name="name" placeholder="Tu Nombre">
+            <input type="email" name="_replyto" placeholder="Tu Email">
           </div>
           <div class="field">
-            <textarea placeholder="Message" name="message" cols="15" rows="8"></textarea>
+            <textarea placeholder="Mensaje..." name="message" cols="15" rows="8"></textarea>
           </div>
           <div class="send">
-            <button class="btn-dark">Send</button>
+            <button class="btn-dark">Enviar</button>
           </div>
         </form>
       </section>
