[add] effects into scroll

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
           <h1 class="title">Hola Soy Luis Lacruz</h1>
           <p class="slug">Frontend Developer por pasión</p>
           <div class="buttons">
-            <a class="btn-dark" href="#contact">Contactamé</a>
-            <a class="btn-outline" href="#about">Sobre mi</a>
+            <a class="btn-dark" data-scroll href="#contact">Contactamé</a>
+            <a class="btn-outline" data-scroll href="#about">Sobre mi</a>
           </div>
         </div>
         <nav class="Header-nav">
           <ul class="Header-nav--list">
             <li class="item">
-              <a href="#about">Sobre mi</a>
+              <a data-scroll href="#about">Sobre mi</a>
             </li>
             <li class="item">
-              <a href="#work">Proyectos</a>
+              <a data-scroll href="#work">Proyectos</a>
             </li>
             <li class="item">
-              <a class="btn-outline" href="#contact">Contactamé</a>
+              <a class="btn-outline" data-scroll href="#contact">Contactamé</a>
             </li>
           </ul>
         </nav>
@@ -50,7 +50,7 @@
             <br>
             <br>
             ¿ Quieres saber más ? Escribeme sera un placer placticar.
-            <a href="#contact">luislacruz.dev@gmail.com</a>
+            <a data-scroll href="#contact">luislacruz.dev@gmail.com</a>
           </p>
           <h5>Sigueme en</h5>
           <div class="social">
@@ -201,5 +201,7 @@
         </div>
       </footer>
     </main>
+
+    <script src="javascripts/bundle.js"></script>
   </body>
 </html>
