--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Frontend Developer, Con experiencia en desarrollo web tanto en el área Frontend (HTML, CSS, Javascript) como Backend (Nodejs).">
+    <meta name="google-site-verification" content="Zd2kyNo7VAc9k1rJAcvNTAzRFkwumEKTrjRQsQ2OXPk" />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Frontend Developer, Con experiencia en desarrollo web tanto en el área Frontend (HTML, CSS, Javascript) como Backend (Nodejs)." />
     <title>Luis Lacruz - Frontend Developer</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="stylesheets/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width" />
   </head>
   <body>
     <header class="Header">
