--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="stylesheets/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-91989065-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <header class="Header">
