[add] description in projects

--- a/index.html
+++ b/index.html
@@ -87,84 +87,91 @@
           <article class="Project-item">
             <h2 class="title">Constructora Casert C.A</h2>
             <figure>
-              <img src="../assets/images/casert-2.jpg" alt="">
+              <img src="../assets/images/casert-2.jpg" alt="Constructora Casert C.A">
             </figure>
             <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam
+              Desarollo completo de Landing page para la empresa Constructora Casert C.A
+              <br>
+              <br>
+              Tecnologias usadas: HTML, CSS con Stylus, Javascript
               <a class="btn-outline" href="https://constructoracasert.com.ve" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
             <h2 class="title">Sfotipy</h2>
             <figure>
-              <img src="../assets/images/sfotipy.jpg" alt="" width="250" height="250">
+              <img src="../assets/images/sfotipy.jpg" alt="" width="250" height="250" alt="Sfotipy">
             </figure>
             <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam
+              Aplicacion web que se conecta a la API de Spotify, que permite buscar, reproducir canciones y albums, crear y seguir playlists
+              <br>
+              <br>
+              Tecnologias usadas: Nodejs con Expressjs, PostgreSQL, CSS con Stylus, JavaScript con Backbonejs y jQuery.
               <a class="btn-outline" href="https://github.com/luixlacrux/sfotipy-nodejs" target="_blank">Ver Repositorio</a>
             </p>
           </article>
           <article class="Project-item">
             <h2 class="title">React Notes</h2>
             <figure>
-              <img src="../assets/images/react-notes.jpg" alt="">
+              <img src="../assets/images/react-notes.jpg" alt="React Notes">
             </figure>
             <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam
+              Una pequeña aplicacion para guardar notas. Inspirada en Google Keep.
+              <br>
+              <br>
+              Tecnologias usadas: Reactjs, Flux y Firebase
               <a class="btn-outline" href="https://keep-notes-c6b14.firebaseapp.com/" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
             <h2 class="title">Radio Universal</h2>
             <figure>
-              <img src="../assets/images/radio-universal.jpg" alt="">
+              <img src="../assets/images/radio-universal.jpg" alt="Radio universal">
             </figure>
             <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam
+              Desarrollo frontend versión mejorada de sitio web para Radio Universal 103FM.
+              <br>
+              <br>
+              Tecnologias usadas: HTML, CSS con Stylus, JavaScript
               <a class="btn-outline" href="https://luixlacrux.github.io/radio-universal" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
             <h2 class="title">PlayPeliculas</h2>
             <figure>
-              <img src="../assets/images/playpeliculas.jpg" alt="">
+              <img src="../assets/images/playpeliculas.jpg" alt="PlayPeliculas">
             </figure>
             <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam
+              Diseño y Maquetacion del sitio web de peliculas.
+              <br>
+              <br>
+              Tecnologias usadas: HTML, CSS con Stylus, y JavaScript con Jquery
               <a class="btn-outline" href="http://luixlacrux.github.io/PlayPeliculas" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
             <h2 class="title">Infocentro</h2>
             <figure>
-              <img src="../assets/images/infocentro.jpg" alt="">
+              <img src="../assets/images/infocentro.jpg" alt="Infocentro">
             </figure>
             <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam
+              Desarrollo frontend de proyecto universitario
+              <br>
+              <br>
+              Tecnologias usadas: HTML, CSS con Stylus, y JavaScript con Jquery
               <a class="btn-outline" href="https://infocentro-9968f.firebaseapp.com/" target="_blank">Ver proyecto</a>
             </p>
           </article>
           <article class="Project-item">
             <h2 class="title">School Dashboard</h2>
             <figure>
-              <img src="../assets/images/school.jpg" alt="">
+              <img src="../assets/images/school.jpg" alt="School dashboard">
             </figure>
             <p class="description">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam
+              Desarrollo Frontend para proyecto escolar
+              <br>
+              <br>
+              Tecnologias usadas: HTML, CSS con Stylus, y JavaScript con Jquery
               <a class="btn-outline" href="https://dashboard-school.firebaseapp.com/docentes/" target="_blank">Ver proyecto</a>
             </p>
           </article>
