--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
  <!doctype html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="google-site-verification" content="Zd2kyNo7VAc9k1rJAcvNTAzRFkwumEKTrjRQsQ2OXPk" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta name="description" content="Frontend Developer, Con experiencia en desarrollo web tanto en el área Frontend (HTML, CSS, Javascript) como Backend (Nodejs)." />
     <title>Luis Lacruz - Frontend Developer</title>
+    <meta name="keywords" content="Luis Lacruz, Frontend Developer, Javascript, Desarrollador web" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Luis Lacruz - Frontend Developer" />
+    <meta property="og:url" content="http://luislacruz.com.ve" />
+    <meta property="og:site_name" content="Luis Lacruz - Frontend Developer" />
+    <meta property="og:image" content="/assets/images/background.jpg" />
+    <meta property="og:description" content="Frontend Developer, Con experiencia
+      en desarrollo web tanto en el área Frontend (HTML, CSS, Javascript) como Backend (Nodejs)." />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Luis Lacruz - Frontend Developer" />
+    <meta name="twitter:site" content="@luixlacrux" />
+    <meta name="twitter:creator" content="@luixlacrux" />
+    <meta name="twitter:description" content="Frontend Developer, Con experiencia
+      en desarrollo web tanto en el área Frontend (HTML, CSS, Javascript) como Backend (Nodejs)." />
+    <meta name="twitter:url" content="http://luislacruz.com.ve" />
+    <meta name="twitter:image" content="/assets/images/background.jpg" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="../assets/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../assets/images/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../assets/images/favicon/apple-icon-72x72.png">
