[update] list projects

--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
             </p>
           </article>
           <article class="Project-item">
+            <h2 class="title">Marvel Challenge</h2>
+            <figure>
+              <img src="../assets/images/marvel.jpg" alt="" width="250" height="250" alt="Marvel">
+            </figure>
+            <p class="description">
+              Una SPA hecha con React que se conecta la API de Marvel y permite buscar Personajes y también ver el detalle de los comics asociados a estos.
+              <br>
+              <br>
+              Tecnologias usadas: React.js, Firebase Hosting, CSS con Stylus.
+              <a class="btn-outline" href="https://marvel-84a14.firebaseapp.com/" target="_blank">Ver Proyecto</a>
+            </p>
+          </article>
+          <article class="Project-item">
             <h2 class="title">React Notes</h2>
             <figure>
               <img src="../assets/images/react-notes.jpg" alt="React Notes">
@@ -183,32 +196,6 @@
               <br>
               Tecnologias usadas: HTML, CSS con Stylus, y JavaScript con Jquery
               <a class="btn-outline" href="http://luixlacrux.github.io/PlayPeliculas" target="_blank">Ver proyecto</a>
-            </p>
-          </article>
-          <article class="Project-item">
-            <h2 class="title">Infocentro</h2>
-            <figure>
-              <img src="../assets/images/infocentro.jpg" alt="Infocentro">
-            </figure>
-            <p class="description">
-              Desarrollo frontend de proyecto universitario
-              <br>
-              <br>
-              Tecnologias usadas: HTML, CSS con Stylus, y JavaScript con Jquery
-              <a class="btn-outline" href="https://infocentro-9968f.firebaseapp.com/" target="_blank">Ver proyecto</a>
-            </p>
-          </article>
-          <article class="Project-item">
-            <h2 class="title">School Dashboard</h2>
-            <figure>
-              <img src="../assets/images/school.jpg" alt="School dashboard">
-            </figure>
-            <p class="description">
-              Desarrollo Frontend para proyecto escolar
-              <br>
-              <br>
-              Tecnologias usadas: HTML, CSS con Stylus, y JavaScript con Jquery
-              <a class="btn-outline" href="https://dashboard-school.firebaseapp.com/docentes/" target="_blank">Ver proyecto</a>
             </p>
           </article>
         </div>
