--- a/index.html
+++ b/index.html
@@ -203,22 +203,21 @@
 
       <section class="Contact wrapper" id="contact">
         <h3 class="title">Contacto</h3>
-        <form action="https://formspree.io/luislacruz.dev@gmail.com" method="post" class="Contact-form">
+        <form id="contact-form"action="https://formspree.io/luislacruz.dev@gmail.com" method="post" class="Contact-form">
           <input type="hidden" name="_subject" value="Website contact!" />
           <input type="text" name="_gotcha" style="display:none" />
           <div class="field">
-            <input type="text" name="name" placeholder="Tu Nombre">
-            <input type="email" name="_replyto" placeholder="Tu Email">
+            <input type="text" name="name" placeholder="Tu Nombre" required />
+            <input type="email" name="_replyto" placeholder="Tu Email" required />
           </div>
           <div class="field">
-            <textarea placeholder="Mensaje..." name="message" cols="15" rows="8"></textarea>
+            <textarea placeholder="Mensaje..." name="message" cols="15" rows="8" required></textarea>
           </div>
           <div class="send">
-            <button class="btn-dark">Enviar</button>
+            <button id="btn-send" class="btn-dark">Enviar</button>
           </div>
         </form>
       </section>
-
       <footer class="Footer">
         <div class="Footer-wrapper">
           <div class="Footer-info">
