[update] Always use HTTPS

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="../assets/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">>
+    <link rel="canonical" href="https://www.luislacruz.com.ve">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
     <link rel="stylesheet" href="stylesheets/styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
